--- a/Year 7/yr7lessons.html
+++ b/Year 7/yr7lessons.html
@@ -38,10 +38,7 @@
             <p style="margin-left: 20%; margin-right:20%;">Literary texts that support and extend students in Years 7 as independent
                readers are drawn from a range of realistic, fantasy, speculative fiction
                 and historical genres and involve some challenging and unpredictable plot
-                 sequences and a range of non-stereotypical characters. <br><a href="yr7eng.html">Online Tests</a></p>
-
-                 <!--Insert video tutorial video of how to solve these problems into each lesson. 
-                  This will then lead off into tests which people wil be able to try-->
+                 sequences and a range of non-stereotypical characters. <br></p>
 
             <b>Vocabulary</b>
             <p style="margin-left: 20%; margin-right:20%;">Students will develop an understanding of a variety of words and 
