--- a/Year 7/yr7eng.html
+++ b/Year 7/yr7eng.html
@@ -14,13 +14,22 @@
         <a id="title" class="navbar-brand mb-0 h1" href="yr7homepage.html"><b>Acadepic</b></a>
       </nav>
 
-      <h4 class="mid">English Lessons</h4>
+      <div class="quiz">
+        <h4>Literary + Vocabulary Test</h4>
+        <p class="score">Score: 3/10</p>
+        <p class="display-4 question"></p>
+        <div>
+          <button type="button" class="btn btn-lg btn-primary optionA"></button>
+          <button type="button" class="btn btn-lg btn-danger optionB"></button>
+        </div>
+      </div>
+      <!-- <button type="button" class="btn btn-lg btn-danger">C</button>
+      <button type="button" class="btn btn-lg btn-warning">D</button> -->
 
 
-
-
-
-
+        <!-- Put database here -->
+        
+    <script src="../quiz.js"></script>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
