--- a/Year 7/yr7eng.html
+++ b/Year 7/yr7eng.html
@@ -7,6 +7,7 @@
     <title>7 English</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="yr7eng.css">
+    <link rel="stylesheet" href="../quiz.css">
 </head>
 <body>
 
@@ -25,10 +26,8 @@
       </div>
       <div class="results">
         <div class="summary display-3"></div>
-        <a href="">Click here for answers</a>
+        <a href="yr7enganswers.html">Click here for answers</a>
       </div>
-      <!-- <button type="button" class="btn btn-lg btn-danger">C</button>
-      <button type="button" class="btn btn-lg btn-warning">D</button> -->
 
 
         <!-- Put database here -->
