--- a/Year 10/yr10lessons.html
+++ b/Year 10/yr10lessons.html
@@ -29,12 +29,13 @@
             </div>
             <div id="collapseOne" class="collapse" aria-labelledby="headingOne" data-parent="#accordion">
               <div class="card-body">
-                <b>Topics</b>
-                <p style="margin-left: 20%; margin-right:20%;"> <br><a href="yr10eng.html">Online Tests</a></p>
+                <b>Homophones</b>
+                <p style="margin-left: 20%; margin-right:20%;"><b><br></p>
+                <b>Vocabulary</b>
+                <p style="margin-left: 20%; margin-right:20%;"><b>Students will learn about: </b>Developing an understanding of a variety of words and descriptions in which expand their Vocabulary index or dictionary. Allowing progressive learning ability and understanding of the use of different words. This will strengthen future responses students may write. <br> <a href="yr10eng.html">Online Tests</a></p>
               </div>
             </div>
           </div>
-
 
           <div class="card">
             <div class="card-header" id="headingTwo">
@@ -46,8 +47,10 @@
             </div>
             <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordion">
               <div class="card-body">
-                <b>Topics</b>
-                <p style="margin-left: 20%; margin-right:20%;"> <br><a href="yr10math.html">Online Tests</a></p>
+                <b>Algebra</b>
+                <p style="margin-left: 20%; margin-right:20%;"><b>Students will learn about: </b><br></p>
+                <b>Geometry</b>
+                <p style="margin-left: 20%; margin-right:20%;"><b>Students will learn about: </b><br> <a href="yr10math.html">Online Tests</a></p>
               </div>
             </div>
           </div>
@@ -63,8 +66,10 @@
             </div>
             <div id="collapseThree" class="collapse" aria-labelledby="headingThree" data-parent="#accordion">
               <div class="card-body">
-                <b>Topics</b>
-                <p style="margin-left: 20%; margin-right:20%;"> <br><a href="yr10sci.html">Online Tests</a></p>
+                <b>Topic 1</b>
+                <p style="margin-left: 20%; margin-right:20%;"><b><br></p>
+                <b>Topic 2</b>
+                <p style="margin-left: 20%; margin-right:20%;"><b>Students will learn about: </b><br> <a href="yr10sci.html">Online Tests</a></p>
               </div>
             </div>
           </div>
