--- a/Year 7/yr7lessons.html
+++ b/Year 7/yr7lessons.html
@@ -35,16 +35,9 @@
         <div id="collapseOne" class="collapse" aria-labelledby="headingOne" data-parent="#accordion">
           <div class="card-body">
             <b>Literary</b>
-            <p style="margin-left: 20%; margin-right:20%;"><b>Students will: </b>Develop an understanding of literary texts that support and extend students in Years 7 as independent
-               readers are drawn from a range of realistic, fantasy, speculative fiction
-                and historical genres and involve some challenging and unpredictable plot
-                 sequences and a range of non-stereotypical characters. <br></p>
-
+            <p style="margin-left: 20%; margin-right:20%;"><b>Students will learn about: </b>Developing an understanding of literary texts that support and extend students in Years 7 as independent readers are drawn from a range of realistic, fantasy, speculative fiction and historical genres and involve some challenging and unpredictable plot sequences and a range of non-stereotypical characters. <br></p>
             <b>Vocabulary</b>
-            <p style="margin-left: 20%; margin-right:20%;"><b>Students will: </b>Develop an understanding of a variety of words and 
-              descriptions in which expand their Vocabulary index or dictionary. 
-              Allowing progressive learning ability and understanding of the use 
-              of different words. This will strengthen future responses students may write. <br> <a href="yr7eng.html">Online Tests</a></p>
+            <p style="margin-left: 20%; margin-right:20%;"><b>Students will learn about: </b>Developing an understanding of a variety of words and descriptions in which expand their Vocabulary index or dictionary. Allowing progressive learning ability and understanding of the use of different words. This will strengthen future responses students may write. <br> <a href="yr7eng.html">Online Tests</a></p>
           </div>
         </div>
       </div>
@@ -61,13 +54,9 @@
         <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordion">
           <div class="card-body">
             <b>Number</b>
-            <p style="margin-left: 20%; margin-right:20%;"><b>Students will learn to:</b> Compare fractions using equivalence.
-              Multiply and divide fractions and decimals using efficient written 
-              strategies and digital technologies. Round decimals to a specified 
-              number of decimal places <br></p>
+            <p style="margin-left: 20%; margin-right:20%;"><b>Students will learn about:</b> Comparing fractions using equivalence. Multiply and divide fractions and decimals using efficient written strategies and digital technologies. Round decimals to a specified number of decimal places <br></p>
             <b>Ratios</b>
-            <p style="margin-left: 20%; margin-right:20%;"><b>Students will learn to: </b>Calculate simple ratios. Simplify larger ratios into a simpler form. Students will develop an understanding of a wide range of mathematical
-              ratios. Allowing, them to solve challenging mathematical problems.<br><a href="yr7math.html">Online Tests</a>
+            <p style="margin-left: 20%; margin-right:20%;"><b>Students will learn about: </b>Calculate simple ratios. Simplify larger ratios into a simpler form. Students will develop an understanding of a wide range of mathematical ratios. Allowing, them to solve challenging mathematical problems.<br><a href="yr7math.html">Online Tests</a>
               </p>
           </div>
         </div>
@@ -85,9 +74,9 @@
         <div id="collapseThree" class="collapse" aria-labelledby="headingThree" data-parent="#accordion">
           <div class="card-body">
             <b>Topic1</b>
-            <p style="margin-left: 20%; margin-right:20%;"><b>Students will learn to:</b>  <br></p>
+            <p style="margin-left: 20%; margin-right:20%;"><b>Students will learn about:</b>  <br></p>
             <b>Topic2</b>
-            <p style="margin-left: 20%; margin-right:20%;"><b>Students will learn to: </b><br>
+            <p style="margin-left: 20%; margin-right:20%;"><b>Students will learn about: </b><br>
               </p>
             <p><a href="yr7sci.html">Online Tests</a></p>
           </div>
