--- a/Year 9/yr9eng.html
+++ b/Year 9/yr9eng.html
@@ -11,10 +11,10 @@
 <body>
 
     <nav class="navbar navbar-dark bg-primary justify-content-center">
-        <a id="title" class="navbar-brand mb-0 h1" href="yr7homepage.html"><b>Acadepic</b></a>
+        <a id="title" class="navbar-brand mb-0 h1" href="yr9homepage.html"><b>Acadepic</b></a>
       </nav>
 
-      <h4 class="mid">English Lessons</h4>
+      <h4 class="mid">Vocabulary + Homophones Test</h4>
 
 
 
