--- a/Year 9/yr9lessons.html
+++ b/Year 9/yr9lessons.html
@@ -29,8 +29,10 @@
             </div>
             <div id="collapseOne" class="collapse" aria-labelledby="headingOne" data-parent="#accordion">
               <div class="card-body">
-                <b>Topics</b>
-                <p style="margin-left: 20%; margin-right:20%;"> <br><a href="yr9eng.html">Online Tests</a></p>
+                <b>Vocabulary</b>
+                <p style="margin-left: 20%; margin-right:20%;"> <b>Students will learn about:</b>Developing an understanding of a variety of words and descriptions in which expand their Vocabulary index or dictionary. Allowing progressive learning ability and understanding of the use of different words. This will strengthen future responses students may write.<br></p>
+                <b>Homophones</b>
+                <p style="margin-left: 20%; margin-right:20%;"> <b>Students will learn about:</b> <br><a href="yr9eng.html">Online Tests</a></p>
               </div>
             </div>
           </div>
@@ -46,8 +48,10 @@
             </div>
             <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordion">
               <div class="card-body">
-                <b>Topics</b>
-                <p style="margin-left: 20%; margin-right:20%;"> <br><a href="yr9math.html">Online Tests</a></p>
+                <b>Algebra</b>
+                <p style="margin-left: 20%; margin-right:20%;"> <b>Students will learn about:</b> <br></p>
+                <b>Fractions, Decimals & Percentages</b>
+                <p style="margin-left: 20%; margin-right:20%;"> <b>Students will learn about:</b> Decimals, Fractions & Percentages and how they are extremely important to mathematics of all stages and also for the future. <br><a href="yr9math.html">Online Tests</a></p>
               </div>
             </div>
           </div>
@@ -62,8 +66,10 @@
             </div>
             <div id="collapseThree" class="collapse" aria-labelledby="headingThree" data-parent="#accordion">
               <div class="card-body">
-                <b>Topics</b>
-                <p style="margin-left: 20%; margin-right:20%;"> <br><a href="yr9sci.html">Online Tests</a></p>
+                <b>Topic 1</b>
+                <p style="margin-left: 20%; margin-right:20%;"> <b>Students will learn about:</b> <br></p>
+                <b>Topic 2</b>
+                <p style="margin-left: 20%; margin-right:20%;"> <b>Students will learn about:</b> <br><a href="yr9sci.html">Online Tests</a></p>
               </div>
             </div>
           </div>
