--- a/loginpage.html
+++ b/loginpage.html
@@ -15,7 +15,7 @@
     </nav>
   
     <div id="below">
-      <h2>What's In Acadepic?</h2>
+      <h2>Year 7 - 10: What's In Acadepic?</h2>
       <p>Here at Acadepic, we strive to empower a student’s academic prowess in 
           Mathematics, English and Science. We pride ourselves with the dedication 
           and motivation we provide to our students as they develop new skills in 
