--- a/Year 10/yr10math.html
+++ b/Year 10/yr10math.html
@@ -11,10 +11,10 @@
 <body>
 
     <nav class="navbar navbar-dark bg-primary justify-content-center">
-        <a id="title" class="navbar-brand mb-0 h1" href="yr7homepage.html"><b>Acadepic</b></a>
+        <a id="title" class="navbar-brand mb-0 h1" href="yr10homepage.html"><b>Acadepic</b></a>
       </nav>
 
-      <h4 class="mid">Mathematics Lessons</h4>
+      <h4 class="mid"></h4>
 
 
 
