--- a/Year 8/yr8lessons.html
+++ b/Year 8/yr8lessons.html
@@ -28,12 +28,10 @@
             </div>
             <div id="collapseOne" class="collapse" aria-labelledby="headingOne" data-parent="#accordion">
               <div class="card-body">
-                <b>Homophone</b>
-                <!--Discuss what is a the topics and what they are then the tests will be at the
-                bottom for the particpant to choose to go to in order to develop their learning.-->
-                <p style="margin-left: 20%; margin-right:20%;"> <br><a href="yr8eng.html">Online Tests</a></p>
                 <b>Vocabulary</b>
-                <p style="margin-left: 20%; margin-right:20%;"> <br><a href="yr8eng.html">Online Tests</a></p>
+            <p style="margin-left: 20%; margin-right:20%;"><b>Students will learn about: </b>Developing an understanding of a variety of words and descriptions in which expand their Vocabulary index or dictionary. Allowing progressive learning ability and understanding of the use of different words. This will strengthen future responses students may write. <br></p>
+                <b>Homophones</b>
+            <p style="margin-left: 20%; margin-right:20%;"><b>Students will learn about: </b> <br><a href="yr8eng.html">Online Tests</a></p>
               </div>
             </div>
           </div>
@@ -49,10 +47,10 @@
             </div>
             <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordion">
               <div class="card-body">
-                <b>Numbers</b>
-                <p style="margin-left: 20%; margin-right:20%;"> <b>Students learn to solve:</b> Decimals, Fractions & Percentage, Chance, Fractions & Mixed Numerals.<br><a href="yr8math.html">Online Tests</a></p>
-                <b>Measurement</b>
-                <p style="margin-left: 20%; margin-right:20%;"> <b>Students learn to solve:</b> Applications of Pythagoras’ Theorem, Circles: Area & Perimeter and Volume of Cylinders <br><a href="yr8math.html">Online Tests</a></p>
+                <b>Number</b>
+                <p style="margin-left: 20%; margin-right:20%;"> <b>Students will learn about:</b> Comparing fractions using equivalence. Multiply and divide fractions and decimals using efficient written strategies and digital technologies. Round decimals to a specified number of decimal places. <br></p>
+                <b>Fractions, Decimals & Percentages</b>
+                <p style="margin-left: 20%; margin-right:20%;"> <b>Students will learn about:</b> Decimals, Fractions & Percentages and how they are extremely important to mathematics of all stages and also for the future. <br><a href="yr8math.html">Online Tests</a></p>
               </div>
             </div>
           </div>
@@ -68,8 +66,10 @@
             </div>
             <div id="collapseThree" class="collapse" aria-labelledby="headingThree" data-parent="#accordion">
               <div class="card-body">
-                <b>Topics</b>
-                <p style="margin-left: 20%; margin-right:20%;"> <br><a href="yr8sci.html">Online Tests</a></p>
+                <b>Topic1</b>
+                <p style="margin-left: 20%; margin-right:20%;"><b>Students will learn about:</b>  <br></p>
+                <b>Topic 2</b>
+                <p style="margin-left: 20%; margin-right:20%;"><b>Students will learn about: </b> <br><a href="yr8sci.html">Online Tests</a></p>
               </div>
             </div>
           </div>
