--- a/Year 7/yr7lessons.html
+++ b/Year 7/yr7lessons.html
@@ -56,8 +56,7 @@
             <b>Number</b>
             <p style="margin-left: 20%; margin-right:20%;"><b>Students will learn about:</b> Comparing fractions using equivalence. Multiply and divide fractions and decimals using efficient written strategies and digital technologies. Round decimals to a specified number of decimal places <br></p>
             <b>Ratios</b>
-            <p style="margin-left: 20%; margin-right:20%;"><b>Students will learn about: </b>Calculate simple ratios. Simplify larger ratios into a simpler form. Students will develop an understanding of a wide range of mathematical ratios. Allowing, them to solve challenging mathematical problems.<br><a href="yr7math.html">Online Tests</a>
-              </p>
+            <p style="margin-left: 20%; margin-right:20%;"><b>Students will learn about: </b>Calculate simple ratios. Simplify larger ratios into a simpler form. Students will develop an understanding of a wide range of mathematical ratios. Allowing, them to solve challenging mathematical problems.<br><a href="yr7math.html">Online Tests</a></p>
           </div>
         </div>
       </div>
@@ -73,12 +72,10 @@
         </div>
         <div id="collapseThree" class="collapse" aria-labelledby="headingThree" data-parent="#accordion">
           <div class="card-body">
-            <b>Topic1</b>
-            <p style="margin-left: 20%; margin-right:20%;"><b>Students will learn about:</b>  <br></p>
-            <b>Topic2</b>
-            <p style="margin-left: 20%; margin-right:20%;"><b>Students will learn about: </b><br>
-              </p>
-            <p><a href="yr7sci.html">Online Tests</a></p>
+            <b>Chemical Reactions</b>
+            <p style="margin-left: 20%; margin-right:20%;"><b>Students will learn about:</b>Chemical reactions, a process in which one or more substances, the reactants, are converted to one or more different substances, the products.<br></p>
+            <b>Volcanoes</b>
+            <p style="margin-left: 20%; margin-right:20%;"><b>Students will learn about:</b>The large ruptures in the crust of a planetary-mass object, such as Earth, that allows hot lava, volcanic ash, and gases to escape from a magma chamber below the surface.<br><a href="yr7sci.html">Online Tests</a></p>
           </div>
         </div>
       </div>
