--- a/Year 7/yr7math.html
+++ b/Year 7/yr7math.html
@@ -26,7 +26,7 @@
       </div>
       <div class="results">
         <div class="summary display-3"></div>
-        <a href="">Click here for answers</a>
+        <a href="yr7mathanswers.html">Click here for answers</a>
       </div>
 
 
