--- a/Year 10/yr10lessons.html
+++ b/Year 10/yr10lessons.html
@@ -29,10 +29,10 @@
             </div>
             <div id="collapseOne" class="collapse" aria-labelledby="headingOne" data-parent="#accordion">
               <div class="card-body">
-                <b>Homophones</b>
-                <p style="margin-left: 20%; margin-right:20%;"><b><br></p>
                 <b>Vocabulary</b>
-                <p style="margin-left: 20%; margin-right:20%;"><b>Students will learn about: </b>Developing an understanding of a variety of words and descriptions in which expand their Vocabulary index or dictionary. Allowing progressive learning ability and understanding of the use of different words. This will strengthen future responses students may write. <br> <a href="yr10eng.html">Online Tests</a></p>
+                <p style="margin-left: 20%; margin-right:20%;"><b>Students will learn about:</b> Developing an understanding of a variety of words and descriptions in which expand their Vocabulary index or dictionary. Allowing progressive learning ability and understanding of the use of different words. This will strengthen future responses students may write. <br></p>
+                <b>Homophones</b>
+                <p style="margin-left: 20%; margin-right:20%;"><b>Students will learn about:</b> Words that are pronounced the same as another word but differs in meaning. A homophone may also differ in spelling.<br> <a href="yr10eng.html">Online Tests</a></p>
               </div>
             </div>
           </div>
@@ -48,9 +48,9 @@
             <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordion">
               <div class="card-body">
                 <b>Algebra</b>
-                <p style="margin-left: 20%; margin-right:20%;"><b>Students will learn about: </b><br></p>
+                <p style="margin-left: 20%; margin-right:20%;"><b>Students will learn about:</b> The study of mathematical symbols and the rules for manipulating these symbols; it is a unifying thread of almost all of mathematics.<br></p>
                 <b>Geometry</b>
-                <p style="margin-left: 20%; margin-right:20%;"><b>Students will learn about: </b><br> <a href="yr10math.html">Online Tests</a></p>
+                <p style="margin-left: 20%; margin-right:20%;"><b>Students will learn about:</b> a branch of mathematics concerned with questions of shape, size, relative position of figures, and the properties of space.<br> <a href="yr10math.html">Online Tests</a></p>
               </div>
             </div>
           </div>
@@ -66,10 +66,10 @@
             </div>
             <div id="collapseThree" class="collapse" aria-labelledby="headingThree" data-parent="#accordion">
               <div class="card-body">
-                <b>Topic 1</b>
-                <p style="margin-left: 20%; margin-right:20%;"><b><br></p>
-                <b>Topic 2</b>
-                <p style="margin-left: 20%; margin-right:20%;"><b>Students will learn about: </b><br> <a href="yr10sci.html">Online Tests</a></p>
+                <b>Cells</b>
+                <p style="margin-left: 20%; margin-right:20%;"><b>Students will learn about:</b> the basic structures of all living organisms. Cells provide structure for the body, take in nutrients from food and carry out important functions.<br></p>
+                <b>The Human Body</b>
+                <p style="margin-left: 20%; margin-right:20%;"><b>Students will learn about:</b> Everything that makes up the human body. The basic parts of the human body are the head, neck, torso, arms and legs.<br> <a href="yr10sci.html">Online Tests</a></p>
               </div>
             </div>
           </div>
