--- a/Year 8/yr8enganswers.html
+++ b/Year 8/yr8enganswers.html
@@ -4,37 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>7 Science</title>
+    <title>8 English</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <link rel="stylesheet" href="yr7sci.css">
-    <link rel="stylesheet" href="../quiz.css">
+    <link rel="stylesheet" href="yr8lessons.css">
 </head>
 <body>
 
     <nav class="navbar navbar-dark bg-primary justify-content-center">
-        <a id="title" class="navbar-brand mb-0 h1" href="yr7homepage.html"><b>Acadepic</b></a>
+        <a id="title" class="navbar-brand mb-0 h1" href="yr8homepage.html"><b>Acadepic</b></a>
       </nav>
 
-      <div class="quiz">
-          <h4>Chemical Reactions + Volcanoes Test</h4>
-          <p class="score"></p>
-          <div class="display-4 question"></div>
-          <div class="options">
-            <button type="button" class="btn btn-lg btn-primary optionA"></button>
-            <button type="button" class="btn btn-lg btn-danger optionB"></button>
-          </div>
-        </div>
-        <div class="results">
-          <div class="summary display-3"></div>
-          <a href="yr7scianswers.html">Click here for answers</a>
-        </div>
+      <img src="year8enganswers.jpeg">
 
-
-
-
-
-        <script src="yr7scidb.js"></script>
-    <script src="../quiz.js"></script>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
