--- a/Year 8/yr8lessons.html
+++ b/Year 8/yr8lessons.html
@@ -31,7 +31,7 @@
                 <b>Vocabulary</b>
             <p style="margin-left: 20%; margin-right:20%;"><b>Students will learn about: </b>Developing an understanding of a variety of words and descriptions in which expand their Vocabulary index or dictionary. Allowing progressive learning ability and understanding of the use of different words. This will strengthen future responses students may write. <br></p>
                 <b>Homophones</b>
-            <p style="margin-left: 20%; margin-right:20%;"><b>Students will learn about: </b> <br><a href="yr8eng.html">Online Tests</a></p>
+            <p style="margin-left: 20%; margin-right:20%;"><b>Students will learn about: </b>Words that are pronounced the same as another word but differs in meaning. A homophone may also differ in spelling.<br><a href="yr8eng.html">Online Tests</a></p>
               </div>
             </div>
           </div>
@@ -66,10 +66,10 @@
             </div>
             <div id="collapseThree" class="collapse" aria-labelledby="headingThree" data-parent="#accordion">
               <div class="card-body">
-                <b>Topic1</b>
-                <p style="margin-left: 20%; margin-right:20%;"><b>Students will learn about:</b>  <br></p>
-                <b>Topic 2</b>
-                <p style="margin-left: 20%; margin-right:20%;"><b>Students will learn about: </b> <br><a href="yr8sci.html">Online Tests</a></p>
+                <b>Food Digestion</b>
+                <p style="margin-left: 20%; margin-right:20%;"><b>Students will learn about:</b>How food is digested. Digestion involves the mixing of food, its movement through the digestive tract, and the chemical breakdown of the large molecules of food into smaller molecules.<br></p>
+                <b>Respiration</b>
+                <p style="margin-left: 20%; margin-right:20%;"><b>Students will learn about:</b>The movement of oxygen from the outside environment to the cells within tissues, and the transport of carbon dioxide in the opposite direction.<br><a href="yr8sci.html">Online Tests</a></p>
               </div>
             </div>
           </div>
