--- a/Year 9/yr9lessons.html
+++ b/Year 9/yr9lessons.html
@@ -30,9 +30,9 @@
             <div id="collapseOne" class="collapse" aria-labelledby="headingOne" data-parent="#accordion">
               <div class="card-body">
                 <b>Vocabulary</b>
-                <p style="margin-left: 20%; margin-right:20%;"> <b>Students will learn about:</b>Developing an understanding of a variety of words and descriptions in which expand their Vocabulary index or dictionary. Allowing progressive learning ability and understanding of the use of different words. This will strengthen future responses students may write.<br></p>
+                <p style="margin-left: 20%; margin-right:20%;"> <b>Students will learn about:</b> Developing an understanding of a variety of words and descriptions in which expand their Vocabulary index or dictionary. Allowing progressive learning ability and understanding of the use of different words. This will strengthen future responses students may write.<br></p>
                 <b>Homophones</b>
-                <p style="margin-left: 20%; margin-right:20%;"> <b>Students will learn about:</b> <br><a href="yr9eng.html">Online Tests</a></p>
+                <p style="margin-left: 20%; margin-right:20%;"> <b>Students will learn about:</b> Words that are pronounced the same as another word but differs in meaning. A homophone may also differ in spelling.<br><a href="yr9eng.html">Online Tests</a></p>
               </div>
             </div>
           </div>
@@ -49,7 +49,7 @@
             <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordion">
               <div class="card-body">
                 <b>Algebra</b>
-                <p style="margin-left: 20%; margin-right:20%;"> <b>Students will learn about:</b> <br></p>
+                <p style="margin-left: 20%; margin-right:20%;"> <b>Students will learn about:</b> The study of mathematical symbols and the rules for manipulating these symbols; it is a unifying thread of almost all of mathematics.<br></p>
                 <b>Fractions, Decimals & Percentages</b>
                 <p style="margin-left: 20%; margin-right:20%;"> <b>Students will learn about:</b> Decimals, Fractions & Percentages and how they are extremely important to mathematics of all stages and also for the future. <br><a href="yr9math.html">Online Tests</a></p>
               </div>
@@ -66,10 +66,10 @@
             </div>
             <div id="collapseThree" class="collapse" aria-labelledby="headingThree" data-parent="#accordion">
               <div class="card-body">
-                <b>Topic 1</b>
-                <p style="margin-left: 20%; margin-right:20%;"> <b>Students will learn about:</b> <br></p>
-                <b>Topic 2</b>
-                <p style="margin-left: 20%; margin-right:20%;"> <b>Students will learn about:</b> <br><a href="yr9sci.html">Online Tests</a></p>
+                <b>Plants</b>
+                <p style="margin-left: 20%; margin-right:20%;"> <b>Students will learn about:</b> Multicellular, predominantly photosynthetic eukaryotes of the kingdom Plantae.<br></p>
+                <b>Photosynthesis</b>
+                <p style="margin-left: 20%; margin-right:20%;"> <b>Students will learn about:</b> A chemical reaction that takes place inside a plant, producing food for the plant to survive. Carbon dioxide, water and light are all needed for photosynthesis to take place.<br><a href="yr9sci.html">Online Tests</a></p>
               </div>
             </div>
           </div>
