--- a/Year 10/yr10homepage.html
+++ b/Year 10/yr10homepage.html
@@ -13,9 +13,12 @@
 <body>
     <nav class="navbar navbar-dark bg-primary justify-content-center">
         <a id="title" class="navbar-brand mb-0 h1" href="yr10homepage.html"><b>Acadepic</b></a>
-        <button type="button" class="close" aria-label="Close" href="javascript:close.window();">
-            <span aria-hidden="true">&times;</span>
-          </button>
+        <input type="button" value="Close this window" onclick=self.close()>
+        <form>
+          <input type="button" value="Close Window" onClick="window.close()">
+          </form>
+          
+          <a href="javascript:window.close()">Close Window</a>
       </nav>
 
       <h2 id="welcome">Welcome To Acadepic Year 10 Homepage</h2>
