--- a/Year 7/yr7homepage.html
+++ b/Year 7/yr7homepage.html
@@ -15,9 +15,8 @@
       </nav>
         </div>
     </nav>
+    <a href="#" class="home">Return To Login Page</a>
 
-
-    
     <h2 id="welcome">Welcome To Acadepic Year 7 Homepage</h2>
   <div class="info"> 
     <h4>What is in Acadepic?</h4>
@@ -44,10 +43,38 @@
     </video>
   </div>
 
-
-
-
-
+  <!-- Bootstrap -->
+  <script>
+    var homeButton = document.querySelector('.home')
+    homeButton.addEventListener('click', homeButtonClick)
+    function homeButtonClick() {
+      const swalWithBootstrapButtons = Swal.mixin({
+        customClass: {
+          confirmButton: 'btn btn-primary',
+          cancelButton: 'btn btn-secondary'
+        },
+        buttonsStyling: false,
+      })
+      swalWithBootstrapButtons.fire({
+        title: 'Are you sure?',
+        text: "",
+        type: 'warning',
+        showCancelButton: true,
+        confirmButtonText: 'Go home',
+        cancelButtonText: 'Stay on page',
+        reverseButtons: true
+      }).then((result) => {
+        if (result.value) {
+          window.location.replace('../loginpage.html')
+        } else if (
+          // Read more about handling dismissals
+          result.dismiss === Swal.DismissReason.cancel
+        ) {
+        }
+      })
+    }
+  </script>
+  <script src="https://cdn.jsdelivr.net/npm/sweetalert2@8"></script>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
