--- a/loginpage.html
+++ b/loginpage.html
@@ -24,8 +24,29 @@
           our students grow and nurture their skills and abilities as they continue 
           their educational journey.</p>
           <p><b>Choose your year group:</b></p>
+    <div id="year">
+        <input type="radio" id="r1" name="Year 7" value="7"> Year 7 <br>
+        <input type="radio" id="r2" name="Year 8" value="8"> Year 8 <br>
+        <input type="radio" id="r3" name="Year 9" value="9"> Year 9 <br>
+        <input type="radio" id="r4" name="Year 10" value="10"> Year 10 <br>
+    </div>
 
   </div>
+    <script>
+      var year = document.getElementById('year').value;
+      var year_value;
+      if(years =='Fixed Rate'){
+          rate_value = document.getElementById('r1').value;
+
+      }else if(rates =='Variable Rate'){
+          rate_value = document.getElementById('r2').value;
+
+      }else if(rates =='Multi Rate'){
+          rate_value = document.getElementById('r3').value;
+      }  
+      document.getElementById('results').innerHTML = rate_value;
+    </script>
+
     <!--<div id="yeargroup">Enter Year Group: <input id="input_year" type="text" maxlength="2" /></div>-->
         
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@8"></script>
