--- a/Year 7/yr7homepage.html
+++ b/Year 7/yr7homepage.html
@@ -39,7 +39,7 @@
 
   <div id="video">
     <video width="320" height="240" controls>
-    <source src="time.mp4" type="video/mp4">
+    <source src="../Tutorial vid.mov" type="video/mp4">
     </video>
   </div>
 
