--- a/Year 8/yr8homepage.html
+++ b/Year 8/yr8homepage.html
@@ -34,6 +34,11 @@
         <a href="yr8lessons.html"><button class="button button">Science</button></a>
       </div>
     
+      <div id="video">
+        <video width="320" height="240" controls>
+        <source src="../Tutorial vid.mov" type="video/mp4">
+        </video>
+      </div>
     <!-- Bootstrap -->
     <script>
       var homeButton = document.querySelector('.home')
