--- a/Year 9/yr9homepage.html
+++ b/Year 9/yr9homepage.html
@@ -34,6 +34,12 @@
         <a href="yr9lessons.html"><button class="button button">Science</button></a>
       </div>
     <!-- Bootstrap -->
+
+    <div id="video">
+      <video width="320" height="240" controls>
+      <source src="../Tutorial vid.mov" type="video/mp4">
+      </video>
+    </div>
     <script>
       var homeButton = document.querySelector('.home')
       homeButton.addEventListener('click', homeButtonClick)
