--- a/Year 10/yr10homepage.html
+++ b/Year 10/yr10homepage.html
@@ -33,7 +33,11 @@
         <a href="yr10lessons.html"><button class="button button">Mathematics</button></a>
         <a href="yr10lessons.html"><button class="button button">Science</button></a>
       </div>
-    
+      <div id="video">
+        <video width="320" height="240" controls>
+        <source src="../Tutorial vid.mov" type="video/mp4">
+        </video>
+      </div>
     <!-- Bootstrap -->
     <script>
       var homeButton = document.querySelector('.home')
