--- a/Year 10/yr10homepage.html
+++ b/Year 10/yr10homepage.html
@@ -14,7 +14,7 @@
     <nav class="navbar navbar-dark bg-primary justify-content-center">
         <a id="title" class="navbar-brand mb-0 h1" href="yr10homepage.html"><b>Acadepic</b></a>
       </nav>
-      <a href="#" class="home">Return To Login Page</a>
+      <a href="#" class="home">Exit</a>
 
       <h2 id="welcome">Welcome To Acadepic Year 10 Homepage</h2>
       <div class="info"> 
@@ -55,8 +55,8 @@
           text: "",
           type: 'warning',
           showCancelButton: true,
-          confirmButtonText: 'Go home',
-          cancelButtonText: 'Stay on page',
+          confirmButtonText: 'Go To Login Page',
+          cancelButtonText: 'Stay On Page',
           reverseButtons: true
         }).then((result) => {
           if (result.value) {
