--- a/Year 7/yr7homepage.html
+++ b/Year 7/yr7homepage.html
@@ -15,7 +15,7 @@
       </nav>
         </div>
     </nav>
-    <a href="#" class="home">Return To Login Page</a>
+    <a href="#" class="home">Exit</a>
 
     <h2 id="welcome">Welcome To Acadepic Year 7 Homepage</h2>
   <div class="info"> 
@@ -60,8 +60,8 @@
         text: "",
         type: 'warning',
         showCancelButton: true,
-        confirmButtonText: 'Go home',
-        cancelButtonText: 'Stay on page',
+        confirmButtonText: 'Go To Login Page',
+        cancelButtonText: 'Stay On Page',
         reverseButtons: true
       }).then((result) => {
         if (result.value) {
