--- a/Year 9/yr9scianswers.html
+++ b/Year 9/yr9scianswers.html
@@ -13,6 +13,8 @@
     <nav class="navbar navbar-dark bg-primary justify-content-center">
         <a id="title" class="navbar-brand mb-0 h1" href="yr9homepage.html"><b>Acadepic</b></a>
       </nav>
+  
+    <p style="text-align: center">Click The Title Or This <a href="yr9homepage.html">Link</a> To Return To The Home Page</p>
 
       <img src="year9scianswers.jpeg" style="margin-left:30%;">
 
