--- a/Year 8/yr8scianswers.html
+++ b/Year 8/yr8scianswers.html
@@ -14,6 +14,8 @@
         <a id="title" class="navbar-brand mb-0 h1" href="yr8homepage.html"><b>Acadepic</b></a>
       </nav>
 
+      <p style="text-align: center">Click The Title Or This <a href="yr8homepage.html">Link</a> To Return To The Home Page</p>
+
       <img src="year8scianswers.jpeg" style="margin-left:30%;">
 
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
