--- a/Year 7/yr7homepage.html
+++ b/Year 7/yr7homepage.html
@@ -15,7 +15,7 @@
       </nav>
         </div>
     </nav>
-    <a href="#" class="home">Exit</a>
+    <b><a href="#" class="home">Exit</a></b>
 
     <h2 id="welcome">Welcome To Acadepic Year 7 Homepage</h2>
   <div class="info"> 
