--- a/Year 9/yr9homepage.html
+++ b/Year 9/yr9homepage.html
@@ -14,7 +14,7 @@
     <nav class="navbar navbar-dark bg-primary justify-content-center">
         <a id="title" class="navbar-brand mb-0 h1" href="yr9homepage.html"><b>Acadepic</b></a>
       </nav>
-      <a href="#" class="home">Exit</a>
+      <a href="#" class="home"><b>Exit</b></a>
 
       <h2 id="welcome">Welcome To Acadepic Year 9 Homepage</h2>
       <div class="info"> 
