--- a/Year 8/yr8lessons.html
+++ b/Year 8/yr8lessons.html
@@ -24,6 +24,7 @@
                 <button class="eng-button" class="btn btn-link" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
                   English
                 </button>
+                <img src="../100104.png" width="60px" height="60px">
               </h5>
             </div>
             <div id="collapseOne" class="collapse" aria-labelledby="headingOne" data-parent="#accordion">
@@ -43,6 +44,7 @@
                 <button class="math-button" class="btn btn-link collapsed" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
                   Mathematics
                 </button>
+                <img src="../f4fc5ba89d.png" width="60px" height="60px">
               </h5>
             </div>
             <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordion">
@@ -62,6 +64,7 @@
                 <button class="sci-button" class="btn btn-link collapsed" data-toggle="collapse" data-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
                   Science
                 </button>
+                <img src="../909435-200.png" width="60px" height="60px">
               </h5>
             </div>
             <div id="collapseThree" class="collapse" aria-labelledby="headingThree" data-parent="#accordion">
